--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@vercel/analytics": "^1.4.1",
     "firebase": "^11.1.0",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
